--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY first webpage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to My First Webpage</h1>
     <p>This is a simple webpage created as part of a learning exercise.</p>
-    <ul>
+    <ul class="ds">
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
+        <button>Click Me</button>
+        <button>sing in </button>
     </ul>   
-    
+
 </body>
 </html>
